# tech-survs-github-models

./: .dockerignore  .gitattributes  .gitignore  README.md  gpt4o.config.json  main.py  openapi.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
api/clients/: __init__.py  gpt4o.py  sqlite.py
handlers/: __init__.py  chat_handler.py  chat_list_handler.py  modules.py
models/: __init__.py  chat_create_request.py  chat_create_response.py  chat_get_response.py  modules.py
processors/: __init__.py  message.py
