[tool.poetry]
name = "tech-survs-github-models"
version = "1.0.0"
description = ""
authors = ["RFull Development"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
azure-ai-inference = "^1.0.0b9"
flask-restful = "^0.3.10"
urllib3 = "^2.3.0"


[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.2"
flake8 = "^7.1.2"
pytest = "^8.3.5"
isort = "^5.13.2"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
